rust_writer_proc/tests/ui/parse_attrs_fails_if_attr_key_not_called_local.stderr
error: expected `,`
 --> tests/ui/parse_attrs_fails_if_attr_key_not_called_local.rs:5:68
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, invalid = path)]
  |                                                                    ^
